add google search console

--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <meta name="google-site-verification" content="ZNBhF7rzGPoMLoIcvGkI0mgN45crqAaCSZRVnu7FZB4" />
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Bellevue Electrician | Professional Electrical Services</title>
